tests/ui/pattern/usefulness/match-ref-ice.stderr
error: unreachable pattern
  --> $DIR/match-ref-ice.rs:13:9
   |
LL |         [1, ref _madoka, 3] => (),
   |         ------------------- matches all the values already
LL |         [1, 2, 3] => (),
   |         ^^^^^^^^^ unreachable pattern
   |
note: the lint level is defined here
  --> $DIR/match-ref-ice.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

